# ptychodus

./: .gitattributes  .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  README.rst  polaris.yaml  ptychodus.code-workspace  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: apptainer.yml  python-package.yml  release.yml
apptainer/: ptychodus.def
doc/: adding_knobs.rst  api.rst  dist.rst  docker.rst  globus.rst  rpc.rst  streaming.rst
docs/source/: api.rst  conf.py  getting_started.rst  globus.rst  index.rst  polaris.yaml  pvapy.rst  readers.rst
path/to/: HDF5FileLoadersManual.md
ptychodus/: __init__.py  __main__.py  flow_deploy.py  headless_start.py  ptychodusAdImageProcessor.py  ptychodusFuncXPolarisConfig.py  ptychodus_bdp.py
ptychodus/api/: action.py  apparatus.py  artifact.py  automation.py  data.py  experiment.py  fluorescence.py  geometry.py  image.py  ipc.py  object.py  observer.py  parametric.py  patterns.py  plot.py  plugins.py  probe.py  product.py  propagator.py  reconstructor.py  rpc.py  scan.py  settings.py  state.py  tree.py  typing.py  visualization.py  visualize.py  workflow.py
ptychodus/controller/: __init__.py  automation.py  core.py  data.py  data_file.py  detector.py  image.py  memory.py  metadata.py  object.py  parametric.py  probe.py  ptychonn.py  ptychopy.py  reconstructor.py  scan.py  settings.py  tike.py  tree.py  visualization.py  widgets.py  workflow.py
ptychodus/controller/artifact/: __init__.py  core.py  info.py  repository.py
ptychodus/controller/data/: __init__.py  dataset.py  dialogFactory.py  file.py  metadata.py  parameters.py  patterns.py  tableModel.py
ptychodus/controller/detector/: __init__.py  controller.py  inspect.py  parameters.py  treeModel.py  wizard.py
ptychodus/controller/experiment/: __init__.py  core.py  detector.py  editor.py  info.py  repository.py
ptychodus/controller/object/: __init__.py  compare.py  controller.py  core.py  dichroic.py  editorFactory.py  exposure.py  fluorescence.py  frc.py  image.py  listModel.py  random.py  stxm.py  tableModel.py  treeModel.py  xmcd.py  xrf.py
ptychodus/controller/patterns/: __init__.py  core.py  detector.py  info.py  tree.py  treeModel.py  wizard.py
ptychodus/controller/probe/: __init__.py  controller.py  core.py  disk.py  editor.py  editorFactory.py  exposure.py  fluorescence.py  fzp.py  image.py  listModel.py  propagator.py  stxm.py  superGaussian.py  tableModel.py  treeModel.py  zernike.py
ptychodus/controller/product/: __init__.py  core.py  editor.py  info.py  repository.py
ptychodus/controller/ptychonn/: __init__.py  controller.py  factory.py  model.py  position.py  training.py
ptychodus/controller/ptychopack/: __init__.py  controller.py  core.py  exit_wave.py  factory.py  object.py  position.py  probe.py  viewControllers.py
ptychodus/controller/ptychopinn/: controller.py  factory.py  model.py  training.py
ptychodus/controller/scan/: __init__.py  cartesian.py  concentric.py  controller.py  core.py  editorFactory.py  lissajous.py  spiral.py  stxm.py  tableModel.py  tabular.py  transformController.py
ptychodus/controller/tike/: __init__.py  adaptiveMoment.py  basic.py  controller.py  core.py  factory.py  multigrid.py  objectCorrection.py  positionCorrection.py  probeCorrection.py  probeSupport.py  viewControllerFactory.py  viewControllers.py
ptychodus/controller/visualization/: __init__.py  controller.py  parameters.py  widget.py
ptychodus/controller/workflow/: __init__.py  authorization.py  compute.py  controller.py  execution.py  inputData.py  outputData.py  status.py  tableModel.py
ptychodus/model/: __init__.py  chooser.py  core.py  crop.py  data.py  data_file.py  detector.py  fzp.py  geometry.py  h5file.py  h5tree.py  image.py  ipc.py  itemRepository.py  memory.py  metadata.py  object.py  observer.py  probe.py  propagator.py  ptychonn.py  ptychopy.py  reconstructor.py  rpc.py  rpcLoadResults.py  scan.py  settings.py  statefulCore.py  tike.py  tree.py  velociprobe.py  watcher.py  workflow.py
ptychodus/model/analysis/: __init__.py  core.py  dichroic.py  exposure.py  fluorescence.py  frc.py  objectInterpolator.py  objectStitcher.py  propagator.py  settings.py  stxm.py  xmcd.py  xrf.py
ptychodus/model/artifact/: __init__.py  core.py  geometry.py  metadata.py  object.py  probe.py  repository.py  scan.py
ptychodus/model/automation/: __init__.py  api.py  buffer.py  (+6 more)
ptychodus/plugins/: aps2idDiffractionFile.py  automation.py  csvObjectFile.py  csvObjectFileReader.py  csvProbeFile.py  csvProbeFileReader.py  csvScanFile.py  cxiDiffractionFile.py  cxiProbeFile.py  cxiScanFile.py  deconvolution.py  delimitedScanFile.py  fresnelZonePlate.py  h5ArtifactFile.py  h5DataFile.py  h5DataFileReader.py  h5DiffractionFile.py  h5ExperimentFile.py  h5ProductFile.py  h5tablesDiffractionFile.py  image.py  imageComplexToRealStrategies.py  imageScalarTransformations.py  lclsFileReaders.py  lclsH5File.py  lclsH5Filev2.py  lynxDiffractionFile.py  lynxOrchestraScanFile.py  lynxScanFile.py  lynxSoftGlueZynqScanFile.py  matObjectFile.py  matObjectFileReader.py  matProbeFile.py  matProbeFileReader.py  matProductFile.py  mdaScanFile.py  nanoMaxScanFile.py  nexusDiffractionFile.py  npyDataFile.py  npyDiffractionFile.py  (+23 more)
ptychodus/view/: __init__.py  artifact.py  automation.py  core.py  data.py  detector.py  experiment.py  image.py  make_qrc.sh  metadata.py  monitor.py  object.py  patterns.py  position.py  probe.py  product.py  ptychonn.py  ptychopack.py  ptychopinn.py  ptychopy.py  reconstructor.py  repository.py  resources.py  resources.qrc  scan.py  settings.py  test.py  tike.py  visualization.py  widgets.py  workflow.py
scripts/scripted_format_conversion/: convert_format.py
src/ptychodus/: __init__.py  __main__.py  cli.py  convert_to_ptychodus.py  ptychodusAdImageProcessor.py  ptychodus_bdp.py  ptychodus_stream_processor.py
test/: README  ptychodus.ini
tests/: aperture.py  test_phase_unwrap.py  test_position_prediction.py  test_propagation.py  test_zernike.py
(+835 files in other folders)
