[build-system]
requires = [
    "setuptools >=46.4.0",
    "setuptools_scm[toml] >=7",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = [
    "fair_research_login",
    "funcx_endpoint.*",
    "gladier.*",
    "globus_sdk.*",
    "h5py",
    "hdf5plugin",
    "lightning.*",
    "parsl.*",
    "ptychonn.*",
    "pvaccess",
    "pvapy.*",
    "scipy.*",
    "tables.*",
    "tifffile",
    "tike.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
