[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ptychodus"
description = "Ptychodus is a ptychography data analysis application."
readme = "README.rst"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
dependencies = [
    "h5py>=3",
    "hdf5plugin",
    "matplotlib",
    "numpy",
    "psutil",
    "pyyaml",
    "requests",
    "scikit-image",
    "scipy",
    "tifffile",
    "watchdog",
]
dynamic = ["version"]

[project.scripts]
ptychodus = "ptychodus.__main__:main"

[project.optional-dependencies]
globus = ["gladier", "gladier-tools>=0.5.4"]
gui = ["PyQt5"]
ptychonn = ["ptychonn==0.3.*,>=0.3.7"]
tike = ["tike==0.25.*,>=0.25.3"]
ptychi = ["ptychi==1.*,>=1.2.0"]

[tool.setuptools.package-data]
"ptychodus" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[[tool.mypy.overrides]]
module = [
    "fair_research_login",
    "funcx_endpoint.*",
    "gladier.*",
    "globus_sdk.*",
    "h5py",
    "hdf5plugin",
    "lightning",
    "parsl.*",
    "ptychi.*",
    "ptycho.*",
    "ptychonn.*",
    "pvaccess",
    "pvapy.*",
    "scipy.*",
    "tifffile",
    "tike.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "F",
    "N",
    "NPY",
]

[tool.pyright]
pythonVersion = "3.10"
