[metadata]
name = ptychodus
version = attr: ptychodus.__version__
url = https://github.com/AdvancedPhotonSource/ptychodus
download_url = https://github.com/AdvancedPhotonSource/ptychodus.git
description = Ptychography Analysis Front-End
long_description = file: README.rst, LICENSE
license = BSD 3-Clause License

[options]
packages = find:
python_requires = >=3.9
install_requires =
    h5py ==3.*
    matplotlib ==3.*
    mypy ==0.*
    numpy ==1.*
    scipy ==1.*
    watchdog ==2.*

[options.extras_require]
tike = tike ==0.21.*
gui = pyqt5 ==5.*

[options.entry_points]
console_scripts =
    ptychodus = ptychodus.__main__:main

[yapf]
based_on_style = pep8
column_limit = 99
