[metadata]
name = ptychodus
version = attr: ptychodus.__version__
url = https://github.com/AdvancedPhotonSource/ptychodus
download_url = https://github.com/AdvancedPhotonSource/ptychodus.git
description = Ptychography Analysis Front-End
long_description = file: README.rst, LICENSE
license = BSD 3-Clause License

[options]
packages = find_namespace:
python_requires = >=3.10
install_requires =
    h5py ==3.*
    matplotlib ==3.*
    numpy ==1.*
    scikit-image ==0.*
    scipy ==1.*
    tifffile ==2022.*
    watchdog ==2.*

[options.extras_require]
ptychonn = ptychonn ==0.1.2
tike = tike ==0.24.*
gui = pyqt5 ==5.*
globus =
    gladier ==0.8.*
    gladier-tools ==0.4.*

[options.packages.find]
include = ptychodus*

[options.entry_points]
console_scripts =
    ptychodus = ptychodus.__main__:main
    ptychodus-rpc = ptychodus.model.rpc:main
